<resources>
    <string name="app_name">Crypto Quiz</string>
    <string name="question1">Who is the mysterious creator of Bitcoin?</string>
    <string name="question2">Select correct Bitcoin characteristics:</string>
    <string name="question3">A bitcoin can be divided down into how many decimal places?</string>
    <string name="question4">What is the best Bitcoin mining hardware?</string>
    <string name="donald_trump" translatable="false">Donald Trump</string>
    <string name="satoshi_nakamoto" translatable="false">Satoshi Nakamoto</string>
    <string name="mickey_mouse" translatable="false">Mickey Mouse</string>
    <string name="kim_dotcom" translatable="false">Kim Dotcom</string>
    <string name="question2Chk1">BTC’s supply is infinite</string>
    <string name="question2Chk2">BTC can be banned.</string>
    <string name="question2Chk3">BTC is untraceable.</string>
    <string name="question2Chk4">BTC is decentralized.</string>
    <string name="asic" translatable="false">ASIC</string>
    <string name="fpga" translatable="false">FPGA</string>
    <string name="gpu" translatable="false">GPU</string>
    <string name="cpu" translatable="false">CPU</string>
    <string name="selected">Selected!</string>
    <string name="checked" translatable="false">Checked!</string>
    <string name="unchecked">Unchecked!</string>
    <string name="finalscore">You Scored:</string>
    <string name="ferrari_488_spider" translatable="false">Ferrari 488 Spider</string>
    <string name="marijuana" translatable="false">Marijuana</string>
    <string name="pizza" translatable="false">Pizza</string>
    <string name="gold">Gold</string>
    <string name="question5">What was the first product purchased with Bitcoin?</string>
    <string name="unkown_user">Unknown Player</string>
    <string name="number">number</string>
    <string name="quiz_result">Quiz Result</string>
    <string name="name">name</string>
    <string name="question_mark_pic" translatable="false">question mark pic</string>
    <string name="main_logo_pic" translatable="false">main logo pic</string>
    <string name="winner_cup_pic" translatable="false">winner cup pic</string>
</resources>
