<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:background="@drawable/question_background"
    android:orientation="vertical"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/question_background"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingStart="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/questionmark"
            android:contentDescription="@string/question_mark_pic" />

        <TextView
            android:id="@+id/question_2_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/question2"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="6dp"
        android:paddingRight="6dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/question_2_chk_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="#FFFFFF"
                android:paddingLeft="6dp"
                android:paddingStart="6dp"
                android:tag="0"
                android:text="@string/question2Chk1"
                android:textColor="#FFEB3B"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/question_2_chk_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="#FFFFFF"
                android:paddingLeft="6dp"
                android:paddingStart="6dp"
                android:tag="1"
                android:text="@string/question2Chk2"
                android:textColor="#FF9800"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/question_2_chk_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="#FFFFFF"
                android:paddingLeft="6dp"
                android:paddingStart="6dp"
                android:tag="1"
                android:text="@string/question2Chk3"
                android:textColor="#03A9F4"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/question_2_chk_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="#FFFFFF"
                android:paddingLeft="6dp"
                android:paddingStart="6dp"
                android:tag="0"
                android:text="@string/question2Chk4"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

        </LinearLayout>


        <ImageView
            android:id="@+id/question_2_image"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="0.3"
            android:contentDescription="@null"
            android:scaleType="fitCenter"
            android:src="@drawable/btcpixelated" />

    </LinearLayout>

</LinearLayout>