<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:background="@drawable/question_background"
    android:orientation="vertical"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/question_background"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingStart="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_question"
            android:contentDescription="@string/question_mark_pic" />

        <TextView
            android:id="@+id/question_3_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/question3"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="horizontal"
        android:paddingLeft="6dp"
        android:paddingRight="6dp">


        <EditText
            android:id="@+id/question_3_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.7"
            android:backgroundTint="#FFC107"
            android:digits="0123456789"
            android:hint="@string/number"
            android:inputType="number"
            android:paddingLeft="6dp"
            android:paddingStart="6dp"
            android:textAlignment="center"
            android:textColor="#FFC107"
            android:textColorHint="#EEEEEE"
            android:textSize="24sp" />


        <ImageView
            android:id="@+id/question_3_image"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="0.3"
            android:contentDescription="@null"
            android:scaleType="fitCenter"
            android:src="@drawable/pizza" />

    </LinearLayout>

</LinearLayout>